--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
         <div class="brand-container">
             <!-- 1. The Circle Logo -->
             <div class="logo-wrapper">
-                <!-- We use the image you have, but CSS will cut it into a perfect circle -->
                 <img src="assets/images/logo.png" alt="Logo Bongless" class="logo-img">
             </div>
 
-            <!-- 2. The Brand Name (Recreated in Code for perfect quality) -->
+            <!-- 2. The Brand Name -->
             <div class="brand-title-block">
                 <div class="main-title">
                     <span class="fire-letter">B<i class="fas fa-fire flame-icon"></i></span>NGLESS
@@ -47,7 +46,20 @@
         
         <!-- Info Card -->
         <div class="info-card">
-            <p><i class="fas fa-map-pin"></i> <a href="https://maps.google.com/?q=Av.+Sinaloa+1520,+Esperanza,+Mexicali" target="_blank">Av. Sinaloa 1520, Esperanza</a></p>
+            <!-- ADDRESS -->
+            <p class="info-line">
+                <i class="fas fa-map-pin"></i> 
+                <a href="https://maps.google.com/?q=Av.+Sinaloa+1520,+Esperanza,+Mexicali+B.C.+21140" target="_blank">
+                    Av. Sinaloa 1520, Esperanza, Mexicali B.C. 21140
+                </a>
+            </p>
+            
+            <!-- HOURS (NEW) -->
+            <p class="info-line">
+                <i class="far fa-clock"></i> 
+                Martes a Domingo: 5:00pm - 10:00pm
+            </p>
+
             <div class="socials">
                 <a href="https://facebook.com/Bongless2020" target="_blank"><i class="fab fa-facebook"></i></a>
                 <a href="https://instagram.com/bongless20.20" target="_blank"><i class="fab fa-instagram"></i></a>
