--- a/index.html
+++ b/index.html
@@ -54,16 +54,22 @@
                 </a>
             </p>
             
-            <!-- HOURS (NEW) -->
+            <!-- HOURS -->
             <p class="info-line">
                 <i class="far fa-clock"></i> 
                 Martes a Domingo: 5:00pm - 10:00pm
             </p>
 
+            <!-- SOCIALS (UPDATED) -->
             <div class="socials">
-                <a href="https://facebook.com/Bongless2020" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://instagram.com/bongless20.20" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://facebook.com/Bongless2020" target="_blank" class="social-link">
+                    <i class="fab fa-facebook"></i> Bongless 20-20
+                </a>
+                <a href="https://instagram.com/bongless20.20" target="_blank" class="social-link">
+                    <i class="fab fa-instagram"></i> bongless20.20
+                </a>
             </div>
+            
             <div class="status-badge" id="status-badge">ABIERTO</div>
         </div>
     </header>
